css little z-index fix

--- a/menarini-master-template/ui.frontend/src/main/webpack/mastertemplate/components/dropdown/dropdown.scss
+++ b/menarini-master-template/ui.frontend/src/main/webpack/mastertemplate/components/dropdown/dropdown.scss
@@ -109,7 +109,7 @@
     top: 70px;
     list-style-type: none;
     background-color: $white;
-    z-index: 1;
+    z-index: 11;
     padding: 0;
     width: 100%;
     border: 1px solid rgb(202, 206, 209);
